crates/biome_cli/tests/snapshots/main_cases_vue_cross_language_rules/no_undeclared_variables_not_triggered_defined_props_options_api.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=noUndeclaredVariables file.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue

<script>
export default {
  props: {
    loading: Boolean,
    disabled: Boolean,
  },
}
</script>
<template>
  <div :class="{ active: loading }" v-if="disabled">test</div>
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
