crates/biome_cli/tests/snapshots/main_cases_vue_cross_language_rules/no_undeclared_variables_script_setup_with_functions_and_vars.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --only=noUndeclaredVariables file.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue

<template>
	<v-text-field
		:class="copySuccess ? 'text-success' : ''"
		ref="inviteLinkText"
		:value="inviteLink"
		:append-icon="mdiClipboardOutline"
		:messages="copySuccess ? 'Copied' : ''"
		@focus="onFocusHighlightText"
		@click:append="copyInviteLink"
	/>
</template>

<script lang="ts" setup>
import { mdiClipboardOutline } from "@mdi/js";
import { ref, computed } from "vue";
import { useStore } from "@/store";
import { useCopyFromTextbox } from "./composables";

function buildInviteLink(
	currentLocation: string,
	roomName: string,
	shortUrl: string | undefined
): string {
   	if (shortUrl !== undefined) {
  		return `https://${shortUrl}/${roomName}`;
   	}
   	return currentLocation.split("?")[0].toLowerCase();
}

const store = useStore();
const inviteLinkText = ref();

function getInviteLink() {
    return buildInviteLink(window.location.href, store.state.room.name, store.state.shortUrl);
}
const inviteLink = computed(getInviteLink);

function onFocusHighlightText(e) {
    e.target.select();
}

const { copy: copyInviteLink, copySuccess } = useCopyFromTextbox(inviteLink, inviteLinkText);
</script>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
